--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -129,7 +129,7 @@
 }
 
 .button {
-  background-color:white ; /* Green */
+  background-color:white ; 
   border-color: #000000;
   color: #000000;
   padding: 5px 20px;
@@ -148,4 +148,5 @@
 }
 .flex-child {
     flex: 1;
-}  
+}
+
