--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,17 +1,17 @@
 .switch {
 	position: relative;
 	display: block;
-	width: 100px;
+	width:100px;
 	height: 30px;
-	padding: 3px;
 	margin: 0 10px 10px 0;
-	background: linear-gradient(to bottom, #eeeeee, #000000 25px);
-	background-image: -webkit-linear-gradient(top, #eeeeee, #000000 25px);
 	border-radius: 18px;
-	box-shadow: inset 0 -1px white, inset 0 1px 1px rgba(0, 0, 0, 0.05);
 	cursor: pointer;
 	box-sizing:content-box;
+	padding: 0;
+	background: #FFF;
+	background-image: none;
 }
+
 .switch-input {
 	position: absolute;
 	top: 0;
@@ -19,15 +19,33 @@
 	opacity: 0;
 	box-sizing:content-box;
 }
+.switch-input:checked ~ .switch-label {
+	background: #FFF;
+	border-color: #000000;
+}
+.switch-input:checked ~ .switch-label:before {
+	opacity: 0;
+}
+.switch-input:checked ~ .switch-label:after {
+	opacity: 1;
+}
+.switch-input:checked ~ .switch-handle {
+	left: 72px;
+	background: #000000;
+	box-shadow: none;
+}
+
 .switch-label {
 	position: relative;
 	display: block;
 	height: inherit;
 	font-size: 14px;
 	text-transform: uppercase;
-	background: #eceeef;
 	border-radius: inherit;
 	box-sizing:content-box;
+	background: #FFF;
+	border: solid 2px #eceeef;
+	box-shadow: none;
 }
 .switch-label:before, .switch-label:after {
 	position: absolute;
@@ -51,23 +69,15 @@
 	color: #000000;
 	opacity: 0;
 }
-.switch-input:checked ~ .switch-label {
-	background: #E1B42B;
-}
-.switch-input:checked ~ .switch-label:before {
-	opacity: 0;
-}
-.switch-input:checked ~ .switch-label:after {
-	opacity: 1;
-}
+
 .switch-handle {
 	position: absolute;
-	top: 4px;
-	left: 4px;
-	width: 28px;
-	height: 28px;
-	background: linear-gradient(to bottom, #000000 40%, #f0f0f0);
-	background-image: -webkit-linear-gradient(top, #000000 40%, #f0f0f0);
+	top: 6px;
+	left: 6px;
+	background: #dadada;
+	width: 22px;
+	height: 22px;
+	box-shadow: none;
 	border-radius: 100%;
 	
 }
@@ -79,54 +89,17 @@
 	margin: -6px 0 0 -6px;
 	width: 12px;
 	height: 12px;
-	background: linear-gradient(to bottom, #eeeeee, #000000);
-	background-image: -webkit-linear-gradient(top, #eeeeee, #000000);
+	background: #eceeef;	
 	border-radius: 6px;
 	
 }
-.switch-input:checked ~ .switch-handle {
-	left: 74px;
-}
-
 .switch-label, .switch-handle {
 	transition: All 0.3s ease;
 	-webkit-transition: All 0.3s ease;
 	-moz-transition: All 0.3s ease;
 	-o-transition: All 0.3s ease;
 }
-.switch-flat {
-	padding: 0;
-	background: #FFF;
-	background-image: none;
-}
-.switch-flat .switch-label {
-	background: #FFF;
-	border: solid 2px #eceeef;
-	box-shadow: none;
-}
-.switch-flat .switch-label:after {
-	color: #000000;
-}
-.switch-flat .switch-handle {
-	top: 6px;
-	left: 6px;
-	background: #dadada;
-	width: 22px;
-	height: 22px;
-	box-shadow: none;
-}
-.switch-flat .switch-handle:before {
-	background: #eceeef;
-}
-.switch-flat .switch-input:checked ~ .switch-label {
-	background: #FFF;
-	border-color: #000000;
-}
-.switch-flat .switch-input:checked ~ .switch-handle {
-	left: 72px;
-	background: #000000;
-	box-shadow: none;
-}
+
 
 .button {
   background-color:white ; /* Green */
@@ -140,12 +113,29 @@
   text-transform: uppercase;
   border-radius: 18px;
   border-style: solid;
+  cursor: pointer;
 }
-
+.button:disabled{
+  background-color:white ; /* Green */
+  border-color: #ccc;
+  color: #ccc;
+  padding: 5px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  text-transform: uppercase;
+  border-radius: 18px;
+  border-style: solid;
+  cursor: default;
+}
 .flex-container {
-    width: 200px;
+    width:min-content;
     display: flex;
 }
 .flex-child {
     flex: 1;
 }  
+.disabled {
+    pointer-events: none; /* Disable an element interaction, so it will not respond any event */
+}
